--- a/recipe-page/style.css
+++ b/recipe-page/style.css
@@ -1,90 +1,95 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
+  box-sizing: border-box;
+  margin: 0;
 }
 
 :root {
-    --clr-yellow: #F2E257;
-    --clr-black: #1E1E1E;
+  --clr-yellow: #f2e257;
+  --clr-black: #1e1e1e;
 }
 
 body {
-    margin: 0;
-    background: var(--clr-yellow);
+  background: var(--clr-yellow);
+  min-height: 100dvh;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.flexbox {
+    display: flex;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
-main, nav {
-    width: 80%;
-    margin: 0 auto;
+main,
+nav {
+  width: 90%;
+  margin: 0 auto;
 }
 
 header {
-    background: var(--clr-black);
-    padding-block: .625rem;
+  background: var(--clr-black);
+  padding-block: 10px;
 }
 
 .logo {
-    display: flex;
-    align-items: center;
+  align-items: center;
 }
 .logo__img {
-    height: 3.75rem;
+  height: 60px;
 }
 .logo__text {
-    font-family: "Slackey", serif;
-    text-transform: uppercase;
-    font-size: 24px;
-    color: var(--clr-yellow);
+  font-family: "Slackey", serif;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  color: var(--clr-yellow);
 }
 
 .card {
-    font-family: "Spicy Rice", serif;
-    margin-block: 2rem 2.5rem;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
+  font-family: "Spicy Rice", serif;
+  margin-block: 32px 40px;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  gap: 24px;
+}
+.card__figure, .card__image {
+border-radius: 1.5rem;
 }
 .card__figure {
-    background: #fff;
-    padding: 16px 16px 8px 16px;
-    border-radius: 24px;
-    box-shadow: .5rem .5rem var(--clr-black);
-    border: 2px solid;
-    transition: all 0.3s ease-in-out;
-}
-#burger:hover {
-    background: #F1A155;
-}
-#pasta:hover {
-    background: hsl(10, 100%, 75%);
-}
-#lemonade:hover {
-    background: #CDD18E;
-}
-
-.card__image {
-    border-radius: 1.5rem;
+  max-width: 300px;
+  background: #fff;
+  padding: 1rem 1rem .5rem 1rem;
+  box-shadow: 8px 8px var(--clr-black);
+  border: .125rem solid;
+  transition: all 0.3s ease-in-out;
 }
 .card__caption {
-    font-size: 16px;
-    text-align: center;
+font-size: 1rem;
+text-align: center;
+}
+#burger:hover {
+  background: #f1a155;
+}
+#pasta:hover {
+  background: hsl(10, 100%, 75%);
+}
+#lemonade:hover {
+  background: #cdd18e;
 }
 
 footer {
-    font-family: "Lato",serif;
-    font-size: .75rem;
-    letter-spacing: 8.64px;
-    background: var(--clr-black);
-    text-align: center;
-    padding: .5rem;
-    color: var(--clr-yellow);
+  font-family: "Lato", serif;
+  font-size: .75rem;
+  letter-spacing: .54rem;
+  background: var(--clr-black);
+  text-align: center;
+  padding: 8px;
+  color: var(--clr-yellow);
 }
-
 footer > a {
-    color: cyan;
-    text-decoration: none;
+  color: cyan;
+  text-decoration: none;
 }
