--- a/style.css
+++ b/style.css
@@ -23,6 +23,11 @@ img {
   max-width: 100%;
 }
 
+a {
+  text-decoration: none;
+  color: #000;
+}
+
 main,
 nav {
   width: 90%;
@@ -91,5 +96,4 @@ footer {
 }
 footer > a {
   color: cyan;
-  text-decoration: none;
 }
